--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -30,18 +30,18 @@ repositories:
   #      url: https://github.com/ros2/navigation.git
   #      version: release-beta2
   #    status: maintained
-  #  ament_clang_format:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_clang_format:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
   ament_cmake:
     release:
       tags:
@@ -66,30 +66,30 @@ repositories:
       url: https://github.com/ament/ament_cmake.git
       version: master
     status: maintained
-  #  ament_cmake_clang_format:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_copyright:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_clang_format:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_cmake_copyright:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
   ament_cmake_core:
     release:
       tags:
@@ -102,30 +102,30 @@ repositories:
       url: https://github.com/ament/ament_cmake.git
       version: master
     status: maintained
-  #  ament_cmake_cppcheck:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_cpplint:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_cppcheck:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_cmake_cpplint:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
   ament_cmake_export_definitions:
     release:
       tags:
@@ -198,18 +198,18 @@ repositories:
       url: https://github.com/ament/ament_cmake.git
       version: master
     status: maintained
-  #  ament_cmake_flake8:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_flake8:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
   ament_cmake_gmock:
     release:
       tags:
@@ -258,18 +258,18 @@ repositories:
       url: https://github.com/ament/ament_cmake.git
       version: master
     status: maintained
-  #  ament_cmake_lint_cmake:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_lint_cmake:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
   ament_cmake_nose:
     release:
       tags:
@@ -282,42 +282,42 @@ repositories:
       url: https://github.com/ament/ament_cmake.git
       version: master
     status: maintained
-  #  ament_cmake_pep257:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_pep8:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cmake_pyflakes:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_pep257:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_cmake_pep8:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_cmake_pyflakes:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
   ament_cmake_python:
     release:
       tags:
@@ -366,66 +366,66 @@ repositories:
       url: https://github.com/ament/ament_cmake.git
       version: master
     status: maintained
-  #  ament_cmake_uncrustify:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_copyright:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cppcheck:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_cpplint:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_flake8:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_uncrustify:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_copyright:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_cppcheck:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_cpplint:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_flake8:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
   #  ament_index_cpp:
   #    release:
   #      tags:
@@ -450,42 +450,42 @@ repositories:
   #      url: https://github.com/ament/ament_index.git
   #      version: release-beta2
   #    status: maintained
-  #  ament_lint_auto:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_lint_cmake:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_lint_common:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_lint_auto:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_lint_cmake:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_lint_common:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
   ament_package:
     release:
       tags:
@@ -498,42 +498,42 @@ repositories:
       url: https://github.com/ament/ament_package.git
       version: master
     status: maintained
-  #  ament_pep257:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_pep8:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ament_pyflakes:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_pep257:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_pep8:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
+  ament_pyflakes:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
   #  ament_python:
   #    release:
   #      tags:
@@ -558,18 +558,18 @@ repositories:
   #      url: https://github.com/ament/ament_tools.git
   #      version: beta2-release
   #    status: maintained
-  #  ament_uncrustify:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_lint-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ament/ament_lint.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_uncrustify:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_lint-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ament/ament_lint.git
+      version: master
+    status: maintained
   #  astra_camera:
   #    release:
   #      tags:
