--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1026,30 +1026,30 @@ repositories:
   #      url: https://github.com/ros2/robot_model.git
   #      version: release-beta2
   #    status: maintained
-  #  launch:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/launch-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/launch.git
-  #      version: release-beta2
-  #    status: maintained
-  #  launch_testing:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/launch-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/launch.git
-  #      version: release-beta2
-  #    status: maintained
+  launch:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/launch-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/launch.git
+      version: master
+    status: maintained
+  launch_testing:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/launch-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/launch.git
+      version: master
+    status: maintained
   #  lifecycle:
   #    release:
   #      tags:
