--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1098,18 +1098,18 @@ repositories:
   #      url: https://github.com/ros2/common_interfaces.git
   #      version: release-beta2
   #    status: maintained
-  #  orocos_kdl:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/orocos_kinematics_dynamics-release.git
-  #      version: 1.4.0-4
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/orocos_kinematics_dynamics.git
-  #      version: beta2-release
-  #    status: maintained
+  orocos_kdl:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/orocos_kinematics_dynamics-release.git
+      version: 1.4.0-4
+    source:
+      type: git
+      url: https://github.com/ros2/orocos_kinematics_dynamics.git
+      version: ros2
+    status: maintained
   osrf_pycommon:
     release:
       tags:
