--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -330,18 +330,18 @@ repositories:
       url: https://github.com/ament/ament_cmake.git
       version: master
     status: maintained
-  #  ament_cmake_ros:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ament_cmake_ros-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/ament_cmake_ros.git
-  #      version: release-beta2
-  #    status: maintained
+  ament_cmake_ros:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ament_cmake_ros-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/ament_cmake_ros.git
+      version: master
+    status: maintained
   ament_cmake_target_dependencies:
     release:
       tags:
