--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5819,6 +5819,20 @@ repositories:
       type: git
       url: https://github.com/ACSLaboratory/pheeno_ros.git
       version: kinetic-devel
+  pheeno_ros_sim:
+    doc:
+      type: git
+      url: https://github.com/ACSLaboratory/pheeno_ros_sim.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ACSLaboratory/pheeno_ros_sim-release.git
+      version: 0.1.1-0
+    source:
+      type: git
+      url: https://github.com/ACSLaboratory/pheeno_ros_sim.git
+      version: kinetic-devel
   phidgets_drivers:
     doc:
       type: git
