add python-rosinstall for additional ubuntu distros

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2694,6 +2694,7 @@ python-rosinstall:
   gentoo: [dev-python/rosinstall]
   macports: [p27-rosinstall]
   ubuntu:
+    artful: [python-rosinstall]
     lucid: [python-rosinstall]
     maverick: [python-rosinstall]
     natty: [python-rosinstall]
@@ -2704,6 +2705,12 @@ python-rosinstall:
     saucy: [python-rosinstall]
     trusty: [python-rosinstall]
     trusty_python3: [python3-rosinstall]
+    utopic: [python-rosinstall]
+    vivid: [python-rosinstall]
+    wily: [python-rosinstall]
+    xenial: [python-rosinstall]
+    yakkety: [python-rosinstall]
+    zesty: [python-rosinstall]
 python-rosinstall-generator:
   arch: [python2-rosinstall-generator]
   debian:
