add python-rosinstall to debian jessie by collapsing debian rules

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2687,9 +2687,7 @@ python-rosdistro:
     trusty_python3: [python3-rosdistro]
 python-rosinstall:
   arch: [python2-rosinstall]
-  debian:
-    buster: [python-rosinstall]
-    stretch: [python-rosinstall]
+  debian: [python-rosinstall]
   fedora: [python-rosinstall]
   gentoo: [dev-python/rosinstall]
   macports: [p27-rosinstall]
