--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -400,18 +400,23 @@ python-blinker:
   gentoo: [dev-python/blinker]
   ubuntu: [python-blinker]
 python-bloom:
-  debian:
-    buster: [python-bloom]
-    stretch: [python-bloom]
+  debian: [python-bloom]
   fedora: [python-bloom]
   gentoo: [dev-python/bloom]
   ubuntu:
+    artful: [python-bloom]
     precise: [python-bloom]
     quantal: [python-bloom]
     raring: [python-bloom]
     saucy: [python-bloom]
     trusty: [python-bloom]
     trusty_python3: [python3-bloom]
+    utopic: [python-bloom]
+    vivid: [python-bloom]
+    wily: [python-bloom]
+    xenial: [python-bloom]
+    yakkety: [python-bloom]
+    zesty: [python-bloom]
 python-bluez:
   arch: [python2-pybluez]
   debian: [python-bluez]
