abseil_cpp: 0.1.1-1 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -58,6 +58,13 @@ repositories:
       url: https://github.com/ros-industrial/abb_experimental.git
       version: indigo-devel
     status: developed
+  abseil_cpp:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/Eurecat/abseil_cpp-release.git
+      version: 0.1.1-1
+    status: maintained
   acado:
     doc:
       type: git
