abseil_cpp: 0.1.1-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -61,6 +61,13 @@ repositories:
       url: https://github.com/ros-industrial/abb_experimental.git
       version: kinetic-devel
     status: developed
+  abseil_cpp:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/Eurecat/abseil_cpp-release.git
+      version: 0.1.1-0
+    status: maintained
   ackermann_controller:
     doc:
       type: git
