python_trep: 1.0.3-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -9899,7 +9899,11 @@ repositories:
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/MurpheyLab/trep-release.git
-      version: 1.0.2-0
+      version: 1.0.3-0
+    source:
+      type: git
+      url: https://github.com/MurpheyLab/trep.git
+      version: master
     status: developed
   pyzmp:
     doc:
