Adding `test_commits: false` to python_trep
Changing for both Indigo and Kinetic. Since trep source is not a ROS package,
the development jobs on Jenkins don't detect any ROS packages. Adding
`test_commits: false` disables the development jobs. More commentary available
on PR #16013

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6173,6 +6173,7 @@ repositories:
       url: https://github.com/MurpheyLab/trep-release.git
       version: 1.0.3-1
     source:
+      test_commits: false
       type: git
       url: https://github.com/MurpheyLab/trep.git
       version: master
