--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -9901,6 +9901,7 @@ repositories:
       url: https://github.com/MurpheyLab/trep-release.git
       version: 1.0.3-0
     source:
+      test_commits: false
       type: git
       url: https://github.com/MurpheyLab/trep.git
       version: master
