--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -62,11 +62,20 @@ repositories:
       version: kinetic-devel
     status: developed
   abseil_cpp:
+    doc:
+      type: git
+      url: https://github.com/Eurecat/abseil-cpp.git
+      version: master
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/Eurecat/abseil_cpp-release.git
-      version: 0.1.1-0
+      version: 0.1.2-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/Eurecat/abseil-cpp.git
+      version: master
     status: maintained
   ackermann_controller:
     doc:
