--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1995,6 +1995,21 @@ repositories:
       url: https://github.com/ros-visualization/executive_smach_visualization.git
       version: indigo-devel
     status: unmaintained
+  ez_interactive_marker:
+    doc:
+      type: git
+      url: https://github.com/neka-nat/ez_interactive_marker.git
+      version: 0.0.2
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/neka-nat/ez_interactive_marker-release.git
+      version: 0.0.2-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/neka-nat/ez_interactive_marker.git
+      version: 0.0.2
   fanuc:
     doc:
       type: git
