--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2703,6 +2703,16 @@ python-rosdistro:
     saucy: [python-rosdistro]
     trusty: [python-rosdistro]
     trusty_python3: [python3-rosdistro]
+    utopic: [python-rosdistro]
+    vivid: [python-rosdistro]
+    wily: [python-rosdistro]
+    wily_python3: [python3-rosdistro]
+    xenial: [python-rosdistro]
+    xenial_python3: [python3-rosdistro]
+    yakkety: [python-rosdistro]
+    yakkety_python3: [python3-rosdistro]
+    zesty: [python-rosdistro]
+    zesty_python3: [python3-rosdistro]
 python-rosinstall:
   arch: [python2-rosinstall]
   debian: [python-rosinstall]
