--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -3596,6 +3596,7 @@ repositories:
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/CogRobRelease/gcloud_speech-release.git
+      version: 0.0.2-0
     source:
       test_pull_requests: true
       type: git
